manifests/scylla-manager/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: scylla-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: scylla-manager
