manifests/scylla-manager/networkpolicy-manager.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-external
  namespace: scylla-manager
spec:
  types:
    - Ingress
    - Egress
  egress:    
    - action: Allow
      destination:
        nets:
        - 10.161.64.0/18
  ingress:    
    - action: Allow
      source:
        nets:
        - 10.161.64.0/18
